Files/iptables
#!/bin/bash

rm -rf /root/iptables >/dev/null 2>&1

clear
MYIP=$(curl -sS ipv4.icanhazip.com)
data_server=$(curl -v --insecure --silent https://google.com/ 2>&1 | grep Date | sed -e 's/< Date: //')

date_list=$(date +"%Y-%m-%d" -d "$data_server")
data_ip="https://raw.githubusercontent.com/MarocBeta/Permission/main/access"

clear
checking_sc() {
useexp=$(wget -qO- $data_ip | grep $MYIP | awk '{print $3}')
if [[ $date_list < $useexp ]]; then
echo -ne
else
echo -e "\033[1;93m────────────────────────────────────────────\033[0m"
echo -e "\033[42m          404 NOT FOUND AUTOSCRIPT          \033[0m"
echo -e "\033[1;93m────────────────────────────────────────────\033[0m"
echo -e ""
echo -e "            \033[91;1mPERMISSION DENIED !\033[0m"
echo -e "   \033[0;33mYour VPS\033[0m $MYIP \033[0;33mHas been Banned\033[0m"
echo -e "     \033[0;33mBuy access permissions for scripts\033[0m"
echo -e "             \033[0;33mContact Admin :\033[0m"
echo -e "      \033[2;32mWhatsApp:\033[0m wa.me/21260860725"
echo -e "      \033[2;32mTelegram:\033[0m t.me/MarocBeta"
echo -e "\033[1;93m────────────────────────────────────────────\033[0m"
exit 0
fi
}

checking_sc

interface=$(ip -4 route ls | grep default | grep -Po '(?<=dev )(\S+)' | head -1)

cat >/etc/iptables/rules.v4 <<-END
*filter
:INPUT ACCEPT [1423:15108189]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1407:131528]

-A INPUT -p tcp -m tcp --dport 10015 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10012 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10011 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10008 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10007 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10006 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10005 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10004 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10003 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10002 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 109 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 169 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 88 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 2200 -j ACCEPT
-A INPUT -p udp -m udp --dport 2100 -j ACCEPT
-A INPUT -p udp -m udp --dport 5300 -j ACCEPT
-A INPUT -p udp -m udp --dport 7100 -j ACCEPT
-A INPUT -p udp -m udp --dport 7200 -j ACCEPT
-A INPUT -p udp -m udp --dport 7300 -j ACCEPT

-A FORWARD -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "torrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "/default.ida?" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string ".exe?/c+dir" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string ".exe?/c_tftp" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "bittorrent-announce" --algo kmp --to 65535 -j DROP
-A FORWARD -m string --string "find_node" --algo kmp --to 65535 -j DROP
-A FORWARD -m string --string "get_peers" --algo kmp --to 65535 -j DROP
-A FORWARD -m string --string "announce_peers" --algo kmp --to 65535 -j DROP

COMMIT

*nat
:PREROUTING ACCEPT [18:1004]
:INPUT ACCEPT [18:1004]
:POSTROUTING ACCEPT [79:4815]
:OUTPUT ACCEPT [79:4815]

-A PREROUTING -i $interface -p udp -m udp --dport 53 -j REDIRECT --to-ports 5300
-A POSTROUTING -s 10.8.0.0/24 -o $interface -j MASQUERADE
-A POSTROUTING -s 20.8.0.0/24 -o $interface -j MASQUERADE

COMMIT
END

cat >/etc/iptables/rules.v6 <<-END
*filter
:INPUT ACCEPT [1:48]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:96]

COMMIT
END

netfilter-persistent reload
systemctl restart netfilter-persistent
sleep 3
